@@ -1,0 +1,123 @@
+/****************************************************************************
+ * include/sys/sendfile.h
+ *
+ *   Copyright (C) 2012 Gregory Nutt. All rights reserved.
+ *   Author: Gregory Nutt <gnutt@nuttx.org>
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ *
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in
+ *    the documentation and/or other materials provided with the
+ *    distribution.
+ * 3. Neither the name NuttX nor the names of its contributors may be
+ *    used to endorse or promote products derived from this software
+ *    without specific prior written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+ * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+ * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
+ * FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
+ * COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
+ * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
+ * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
+ * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
+ * AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
+ * LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN
+ * ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+ * POSSIBILITY OF SUCH DAMAGE.
+ *
+ ****************************************************************************/
+
+#ifndef __INCLUDE_SYS_SENDFILE_H
+#define __INCLUDE_SYS_SENDFILE_H
+
+/****************************************************************************
+ * Included Files
+ ****************************************************************************/
+
+#include <nuttx/config.h>
+
+#include <sys/types.h>
+
+/****************************************************************************
+ * Pre-Processor Definitions
+ ****************************************************************************/
+/* Configuration ************************************************************/
+
+#ifndef CONFIG_LIB_SENDFILE_BUFSIZE
+#  define CONFIG_LIB_SENDFILE_BUFSIZE 512
+#endif
+
+/****************************************************************************
+ * Public Type Definitions
+ ****************************************************************************/
+
+/****************************************************************************
+ * Public Function Prototypes
+ ****************************************************************************/
+
+#undef EXTERN
+#if defined(__cplusplus)
+#define EXTERN extern "C"
+extern "C" {
+#else
+#define EXTERN extern
+#endif
+
+/************************************************************************
+ * Name: sendfile
+ *
+ * Description:
+ *   sendfile() copies data between one file descriptor and another.
+ *   sendfile() basically just wraps a sequence of reads() and writes()
+ *   to perform a copy.  It serves a purpose in systems where there is
+ *   a penalty for copies to between user and kernal space, but really
+ *   nothing in NuttX but provide some Linux compatible (and adding
+ *   another 'almost standard' interface). 
+ *
+ *   NOTE: This interface is *not* specified in POSIX.1-2001, or other
+ *   standards.  The implementation here is very similar to the Linux
+ *   sendfile interface.  Other UNIX systems implement sendfile() with
+ *   different semantics and prototypes.  sendfile() should not be used
+ *   in portable programs.
+ *
+ * Input Parmeters:
+ *   infd   - A file (or socket) descriptor opened for reading
+ *   outfd  - A descriptor opened for writing.
+ *   offset - If 'offset' is not NULL, then it points to a variable
+ *            holding the file offset from which sendfile() will start
+ *            reading data from 'infd'.  When sendfile() returns, this
+ *            variable will be set to the offset of the byte following
+ *            the last byte that was read.  If 'offset' is not NULL,
+ *            then sendfile() does not modify the current file offset of
+ *            'infd'; otherwise the current file offset is adjusted to
+ *            reflect the number of bytes read from 'infd.'
+ *
+ *            If 'offset' is NULL, then data will be read from 'infd'
+ *            starting at the current file offset, and the file offset
+ *            will be updated by the call.
+ *   count -  The number of bytes to copy between the file descriptors.
+ *
+ * Returned Value:
+ *   If the transfer was successful, the number of bytes written to outfd is
+ *   returned.  On error, -1 is returned, and errno is set appropriately.
+ *   There error values are those returned by read() or write() plus:
+ *
+ *   EINVAL - Bad input parameters.
+ *   ENOMEM - Could not allocated an I/O buffer
+ *
+ ************************************************************************/
+
+EXTERN ssize_t sendfile (int outfd, int infd, FAR off_t *offset, size_t count);
+
+#undef EXTERN
+#if defined(__cplusplus)
+}
+#endif
+
+#endif /* __INCLUDE_SYS_SENDFILE_H */
